# vtubestudio-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  create-tag.yml  release.yml  test.yml
examples/: api_state.rs  events.rs  hotkey.rs  no_middleware.rs  pin_item.rs  readme.rs  reconnect.rs  spin.rs  statistics.rs
src/: client.rs  clone_boxed.rs  codec.rs  data.rs  enumeration.rs  error.rs  error2.rs  lib.rs  model.rs  transport.rs
src/client/: id.rs  maker.rs  mod.rs  transport.rs
src/data/: enumeration.rs  envelope.rs  error_id.rs  mod.rs
src/enumeration/: mod.rs  number.rs  string.rs
src/service/: api.rs  auth.rs  clone_box.rs  maker.rs  mod.rs  retry.rs
src/transport/: api.rs  buffered.rs  codec.rs  connector.rs  event.rs  mod.rs  websocket.rs
src/transport2/: api.rs  codec.rs  convert.rs  mod.rs
