[package]
name = "vtubestudio"
version = "0.1.0"
edition = "2018"
authors = ["Walfie <walfington@gmail.com"]
license = "MIT"
readme = "README.md"
keywords = ["vtubestudio"]
categories = ["api-bindings"]
homepage = "https://github.com/walfie/vtubestudio-rs"
repository = "https://github.com/walfie/vtubestudio-rs"
description = "A library for interacting with the VTube Studio API."

[dependencies]
displaydoc = "0.2"
futures-core = "0.3.17"
futures-sink = "0.3.17"
futures-util = "0.3.17"
paste = "1.0.5"
pin-project-lite = "0.2.7"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.30"
tokio = { version = "1.13.0" }
tokio-tower = "0.6.0"
tokio-tungstenite = "0.15.0"
tower = { version = "0.4.10", features = ["util", "retry", "reconnect", "buffer"] }

[dev-dependencies]
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
