[package]
name = "vtubestudio"
version = "0.1.0"
edition = "2018"
authors = ["Walfie <walfington@gmail.com"]
license = "MIT"
readme = "README.md"
keywords = ["vtubestudio"]
categories = ["api-bindings"]
homepage = "https://github.com/walfie/vtubestudio-rs"
repository = "https://github.com/walfie/vtubestudio-rs"
description = "A library for interacting with the VTube Studio API."

[dependencies]
displaydoc = "0.2"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
paste = "1"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = "1"
tokio-tower = "0.6"
tokio-tungstenite = "0.15"
tower = { version = "0.4", features = ["util", "retry", "reconnect", "buffer"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
