[package]
name = "vtubestudio"
version = "0.2.1-alpha.0"
edition = "2018"
authors = ["Walfie <walfington@gmail.com"]
license = "MIT"
readme = "README.md"
keywords = ["vtubestudio"]
categories = ["api-bindings"]
homepage = "https://github.com/walfie/vtubestudio-rs"
repository = "https://github.com/walfie/vtubestudio-rs"
documentation = "https://docs.rs/vtubestudio"
description = "A library for interacting with the VTube Studio API."

[features]
default = ["tokio-tungstenite"]

[[example]]
name = "statistics"
required-features = ["tokio-tungstenite"]

[dependencies]
displaydoc = "0.2"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
paste = "1"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
smol_str = { version = "0.1", features = ["serde"] }
thiserror = "1"
tokio = "1"
tokio-tower = "0.6"
tokio-tungstenite = { version = "0.15", optional = true }
tower = { version = "0.4", features = ["util", "retry", "reconnect", "buffer"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
# Use `doc_cfg` feature on docs.rs
# https://stackoverflow.com/a/61417700
all-features = true # document all features
rustdoc-args = ["--cfg", "docsrs"] # defines the configuration attribute `docsrs`
